compiler/tools/fpp-check/test/param/duplicate_save_opcode_implicit.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/param/duplicate_save_opcode_implicit.fpp: 7.3
  param P3: bool
  ^
error: duplicate opcode value (17 dec, 11 hex)
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/param/duplicate_save_opcode_implicit.fpp: 3.3
  param P1: U32 save opcode 0x11
  ^
